@@ -1,3 +1,8 @@
+*March 12, 2012*
+
+* Ember.Resource: added optional resourceIdField
+* BREAKING: Ember.Resource: renamed _id() -> _resourceId() to avoid naming conflicts
+
 *February 27, 2012*
 
 * Added full test suite
